<resources>
    <string name="app_name">Aklaholic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_meal_image">Random meal image</string>

    <string name="meal_image_description">Meal image</string>
    <string name="favorite_meal">Favorite this meal</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="video_tutorial">Video Tutorial</string>

</resources>